pax upgrade and add
added
observable
very many players

--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -71,7 +71,7 @@
     },
     {
       "projectID": 263420,
-      "fileID": 3647008,
+      "fileID": 3663016,
       "required": true,
       "__meta": {
         "name": "Xaero's Minimap",
@@ -534,7 +534,7 @@
     },
     {
       "projectID": 419697,
-      "fileID": 3652981,
+      "fileID": 3666162,
       "required": true,
       "__meta": {
         "name": "Architectury API (Fabric)",
@@ -627,7 +627,7 @@
     },
     {
       "projectID": 440979,
-      "fileID": 3654879,
+      "fileID": 3662798,
       "required": true,
       "__meta": {
         "name": "WTHIT",
@@ -830,6 +830,18 @@
       }
     },
     {
+      "projectID": 509575,
+      "fileID": 3626693,
+      "required": true,
+      "__meta": {
+        "name": "Observable",
+        "dependencies": [
+          308769,
+          419697
+        ]
+      }
+    },
+    {
       "projectID": 511319,
       "fileID": 3622245,
       "required": true,
@@ -917,7 +929,7 @@
     },
     {
       "projectID": 533006,
-      "fileID": 3594396,
+      "fileID": 3664303,
       "required": true,
       "__meta": {
         "name": "Animatica",
@@ -967,6 +979,14 @@
       "required": true,
       "__meta": {
         "name": "Better Fps - Render Distance[Forge/Fabric]"
+      }
+    },
+    {
+      "projectID": 552542,
+      "fileID": 3614398,
+      "required": true,
+      "__meta": {
+        "name": "Very Many Players (Fabric)"
       }
     },
     {
