--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -311,6 +311,17 @@
       }
     },
     {
+      "projectID": 317995,
+      "fileID": 3540966,
+      "required": true,
+      "__meta": {
+        "name": "Lib Block Attributes",
+        "dependencies": [
+          306612
+        ]
+      }
+    },
+    {
       "projectID": 319057,
       "fileID": 3641132,
       "required": true,
