--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -992,6 +992,14 @@
       }
     },
     {
+      "projectID": 501198,
+      "fileID": 3642129,
+      "required": true,
+      "__meta": {
+        "name": "BFAPI"
+      }
+    },
+    {
       "projectID": 506898,
       "fileID": 3668091,
       "required": true,
