--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -398,6 +398,15 @@
       }
     },
     {
+      "projectID": 380649,
+      "fileID": 3672635,
+      "required": true,
+      "__meta": {
+        "name": "Fabric Shield Lib",
+        "explicit": false
+      }
+    },
+    {
       "projectID": 381257,
       "fileID": 3555013,
       "required": true,
@@ -1127,6 +1136,17 @@
       }
     },
     {
+      "projectID": 538011,
+      "fileID": 3594300,
+      "required": true,
+      "__meta": {
+        "name": "Basic Shields [Fabric]",
+        "dependencies": [
+          380649
+        ]
+      }
+    },
+    {
       "projectID": 546841,
       "fileID": 3570785,
       "required": true,
@@ -1148,6 +1168,14 @@
       "required": true,
       "__meta": {
         "name": "Alternate Current"
+      }
+    },
+    {
+      "projectID": 551763,
+      "fileID": 3672994,
+      "required": true,
+      "__meta": {
+        "name": "Chisel Refabricated"
       }
     },
     {
